feat: bear todos done

--- a/src/bear-todos/index.pug
+++ b/src/bear-todos/index.pug
@@ -4,3 +4,5 @@ block content
   script(src='https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.7.2/prop-types.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/react/16.13.1/umd/react.production.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.1/umd/react-dom.production.min.js')
+  script(src='./gsap.min.js')
+  script(src='./MorphSVGPlugin.min.js')
