--- a/src/d3-ditto/index.pug
+++ b/src/d3-ditto/index.pug
@@ -1,4 +1,5 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src="./gsap.min.js")
   script(src="https://d3js.org/d3.v5.min.js")
