feat: pokedex complete

--- a/src/pokedex/index.pug
+++ b/src/pokedex/index.pug
@@ -2,3 +2,4 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.4.4/polyfill.js')
+  script(src='./gsap.min.js')
