--- a/src/pokedex/dev.pug
+++ b/src/pokedex/dev.pug
@@ -1,6 +1,143 @@
 .pokedex__container
   button.grab(title='Change Pokémon')
-  include pokedex--base.pug
-  .pokedex__flip
-    include pokedex--flip-inner.pug
-    include pokedex--flip-outer.pug
+  .pokedex__flash
+  svg.pokedex__base(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80.8721 112.4479')
+    //- path(d='M-128.5 136.2227c-3.599 0-6.4963 2.8968-6.4963 6.4957v98.133c0 3.5989 2.8974 6.4963 6.4962 6.4963h72.8788v-111.125h-44.7083zM21.358 10.5258c-3.5989 0-6.4963 2.8969-6.4963 6.4957v98.133c0 3.599 2.8974 6.4963 6.4963 6.4963H94.2367V10.5258H49.5283z' fill='none')
+    g(transform='translate(148.5737 -96.5143)')
+      rect.pokedex__inner-panel(ry='0' y='96.5143' x='-148.4867' height='112.4479' width='80.6979' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+      path.pokedex__shadow(d='M-97.795 101.0322l-11.145.1741h-32.476c-3.5989 0-6.4963 2.8969-6.4963 6.4958v23.2699h38.9723l11.145-13.991h29.4319v-15.9488h-6.5738z')
+      path.pokedex__shadow(d='M-80.927 97.1758v111.125h12.0799V97.1757h-6.4962z')
+      path.pokedex__outer-panel(d='M-45.9736 97.308v111.125h9.5379V97.308h-6.4962z' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round' transform='matrix(.9997 0 0 1.00502 -31.3657 -.6192)')
+      g(transform='matrix(.9997 0 0 1.00502 .639 -.4863)')
+        path.pokedex__shine(d='M-78.1205 97.1757v111.125h3.3908V97.1757h-2.3094z')
+        path.pokedex__outline(d='M-77.9882 97.1757v111.125h9.538V97.1757h-6.4963z' fill='none' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        rect.pokedex__outline(width='9.5537' height='3.7956' x='-77.9961' y='189.4617' ry='0' fill='none' stroke-width='1.3072' stroke-linecap='round' stroke-linejoin='round')
+        rect.pokedex__outline(ry='0' y='128.6232' x='-77.9961' height='3.7956' width='9.5537' fill='none' stroke-width='1.3072' stroke-linecap='round' stroke-linejoin='round')
+      g(transform='translate(-13.25 -7.9432)')
+        path.pokedex__screen-surround(d='M-127.138 141.8578v31.933l6.0368 13.2353h49.9039v-45.1683z' stroke-width='1.7452' stroke-linecap='round' stroke-linejoin='round')
+        path.pokedex__main-screen(stroke-width='1.1079' stroke-linecap='round' stroke-linejoin='round' d='M-118.4059 148.0342h38.4762v26.4656h-38.4762z')
+        circle.pokedex__standby-light(cx='-115.3879' cy='180.4871' r='2.9104' stroke-width='1.323' stroke-linecap='round' stroke-linejoin='round')
+        path.pokedex__speaker-grill(d='M-87.617 178.1058h7.4084M-87.617 180.7516h7.4084M-87.617 183.3974h7.4084' fill='none' stroke='#000' stroke-width='1.3229')
+        circle.pokedex__screen-notch(cx='-104.4593' cy='145.0329' r='.7937')
+        circle.pokedex__screen-notch(r='.7937' cy='145.0329' cx='-93.876')
+        image.pokedex__image(transform="translate(-114, 150)" height="28" width="28" x="1" y="-3")
+        path.pokedex__shine-reduced(d='M-110.2 148.0342l-8.2058 11.7812v6.0187l12.3972-17.8zM-104.0738 148.0342l-14.332 20.577v5.8886h10.4087l18.433-26.4656z' fill='#fff' )
+      g.pokedex__main-button(transform='translate(-13.25 -10.1882)')
+        circle(r='6.0854' cy='201.6537' cx='-121.2638' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        path(d='M-121.264 195.5682a6.0854 6.0854 0 00-6.0854 6.0855 6.0854 6.0854 0 00.2837 1.8138 6.0492 7.2064 0 004.7077 2.684 6.0492 7.2064 0 005.9531-5.9665 6.0492 7.2064 0 00-1.5074-3.6054 6.0854 6.0854 0 00-3.3517-1.0114z')
+        circle(cx='-121.2638' cy='201.6537' r='6.0854' fill='none' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+      g.pokedex__option-button.pokedex__option-button--red(transform='translate(38.4696 1.4113)')
+        rect(ry='1.4653' y='181.8065' x='-162.6102' height='2.9305' width='11.1105' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        rect(width='11.1105' height='1.2467' x='-162.6102' y='183.4903' ry='.6234' )
+        rect(width='11.1105' height='2.9305' x='-162.6102' y='181.8065' ry='1.4653' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+      g.pokedex__option-button.pokedex__option-button--green(transform='translate(54.3446 1.4113)')
+        rect(width='11.1105' height='2.9305' x='-162.6102' y='181.8065' ry='1.4653' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        rect(ry='.6234' y='183.4903' x='-162.6102' height='1.2467' width='11.1105' )
+        rect(ry='1.4653' y='181.8065' x='-162.6102' height='2.9305' width='11.1105' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+      g(transform='translate(-3.7084 -42.3675)')
+        //- path.pokedex__dpad(d='M-89.5603 229.281a.9641.9641 0 00-.9664.9663v2.9362h-2.9357a.9646.9646 0 00-.9669.9664v3.2835c0 .5355.4314.9664.9669.9664h2.9357v2.9362c0 .5355.431.9664.9664.9664h3.284a.9641.9641 0 00.9664-.9664v-2.9362h2.9357a.9646.9646 0 00.9669-.9664V234.15a.9646.9646 0 00-.9669-.9664h-2.9357v-2.9362a.9641.9641 0 00-.9664-.9664z' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        //- path.pokedex__dpad-end(d='M-90.5268 238.9952v2.341c0 .5354.431.9663.9664.9663h3.284a.9641.9641 0 00.9664-.9663v-2.341zM-91.7834 233.1833h-2.341a.9641.9641 0 00-.9663.9663v3.284c0 .5355.4309.9664.9663.9664h2.341zM-84.0532 238.4h2.341a.9641.9641 0 00.9663-.9663v-3.284a.9641.9641 0 00-.9663-.9664h-2.341zM-85.31 231.9268v-2.341a.9641.9641 0 00-.9663-.9663h-3.284a.9641.9641 0 00-.9664.9663v2.341z')
+        path.pokedex__dpad(d='M-89.5603 229.281a.9641.9641 0 00-.9664.9663v2.9362h-2.9357a.9646.9646 0 00-.9669.9664v3.2835c0 .5355.4314.9664.9669.9664h2.9357v2.9362c0 .5355.431.9664.9664.9664h3.284a.9641.9641 0 00.9664-.9664v-2.9362h2.9357a.9646.9646 0 00.9669-.9664V234.15a.9646.9646 0 00-.9669-.9664h-2.9357v-2.9362a.9641.9641 0 00-.9664-.9664z' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        circle.pokedex__dpad-middle(r='1.3229' cy='235.7916' cx='-87.9183')
+      g(transform='translate(-13.25 -10.1882)')
+        rect.pokedex__mini-screen(ry='1.8165' y='200.3798' x='-110.8803' height='9.7433' width='22.2963' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+        path.pokedex__shine(d='M-99.732 207.5716a11.0382 3.7418 0 00-10.2113 2.3255c.2604.1438.56.2258.8796.2258h18.663c.3188 0 .618-.0817.8779-.2248a11.0382 3.7418 0 00-10.2092-2.3265z')
+        rect.pokedex__mini-screen-outline(width='22.2963' height='9.7433' x='-110.8803' y='200.3798' ry='1.8165' fill='none' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+      rect.pokedex__outline(fill="none" ry='0' y='96.5143' x='-148.4867' height='112.4479' width='80.6979' stroke-width='3' stroke-linecap='round' stroke-linejoin='round')
+      g
+        path.pokedex__shine(d='M-148.482 96.519v29.9305h39.5305l11.3047-13.9866h29.8534v-15.944h-29.8534z' stroke='none' stroke-width='1.3322' stroke-linecap='round' stroke-linejoin='round')
+        path.pokedex__outer-panel(d='M-146.8948 98.1064v28.343h37.9434l11.3048-13.9867h29.8535V98.1064h-28.266z' stroke-width="0" transform="translate(1, 1)")
+        path.pokedex__outline(d='M-148.482 96.519v29.9305h39.5305l11.3047-13.9866h29.8534v-15.944h-29.8534z' fill='none' stroke-width='3' stroke-linecap='round' stroke-linejoin='round')
+        g()
+          g(transform='matrix(.85677 0 0 .85677 11.8315 15.2612)')
+            circle(r='11.9063' cy='113.5067' cx='-169.0352')
+            g.pokedex__big-blue(transform='translate(-79.1172 -28.3928)')
+              circle(cx='-90.3628' cy='141.0601' r='11.9063')
+              path(d='M-102.2692 141.0601a11.9062 11.9062 0 0011.9062 11.9063A11.9062 11.9062 0 00-78.4567 141.06z')
+              circle.pokedex__shine(cx='-90.3628' cy='141.0601' r='10.0542')
+              circle.pokedex__outline(r='9.0147' cy='141.0601' cx='-90.3628')
+              circle(cx='-90.3628' cy='141.0601' r='7.9375')
+              path(d='M-90.363 133.1226a7.9375 7.9375 0 00-7.9375 7.9375 7.9375 7.9375 0 003.2965 6.4301 8.8061 8.472 0 002.3027.3044 8.8061 8.472 0 008.8062-8.4718 8.8061 8.472 0 00-1.122-4.1171 7.9375 7.9375 0 00-5.3459-2.083z')
+              circle.pokedex__shine-reduced(cx='-91.9407' cy='140.9146' r='1.2027' fill='#fff')
+              circle.pokedex__shine-reduced(cx='-93.678' cy='137.1728' r='2.1382' fill='#fff')
+          g(transform='translate(44.7614 -41.7732)')
+            circle.pokedex__mini-light-outline(cx='-151.0342' cy='144.9505' r='2.6458')
+            g(transform='translate(30.0611 -32.7338)')
+              circle.pokedex__mini-light.pokedex__mini-light--green(r='1.9844' cy='177.6843' cx='-181.0953')
+              circle.pokedex__shine-reduced(r='.6615' cy='177.4036' cx='-181.6164')
+          g(transform='translate(38.347 -41.7732)')
+            circle.pokedex__mini-light-outline(r='2.6458' cy='144.9505' cx='-151.0342')
+            g(transform='translate(30.0611 -32.7338)')
+              circle.pokedex__mini-light.pokedex__mini-light--amber(cx='-181.0953' cy='177.6843' r='1.9844')
+              circle.pokedex__shine-reduced(cx='-181.6164' cy='177.4036' r='.6615')
+          g(transform='translate(31.9324 -41.7732)')
+            circle.pokedex__mini-light-outline(cx='-151.0342' cy='144.9505' r='2.6458')
+            g(transform='translate(30.0611 -32.7338)')
+              circle.pokedex__mini-light.pokedex__mini-light--red(r='1.9844' cy='177.6843' cx='-181.0953')
+              circle.pokedex__shine-reduced(r='.6615' cy='177.4036' cx='-181.6164')
+  .pokedex__flip-container
+    .pokedex__flip
+      .pokedex__flip-inner-container
+        button.close(title="Close Pokédex")
+        svg.pokedex__flip--inner(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 71.16 96.499')
+          g(transform='translate(-41.5125 -84.445)')
+            path.pokedex__inner-panel(d='M42.174 85.1064v95.1761h69.8371V99.0973H73.1256l-11.145-13.9909H42.174z' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+            path(d='M-277.0738 232.737c-3.5989 0-6.4962 2.8968-6.4962 6.4957v98.133c0 3.5989 2.8973 6.4963 6.4962 6.4963h72.8788V232.737h-44.7084zM-127.2158 107.0401c-3.5988 0-6.4962 2.8969-6.4962 6.4957v98.133c0 3.599 2.8974 6.4963 6.4962 6.4963h72.8788v-111.125h-44.7084z' fill='none')
+            g.pokedex__text-screen
+              path(stroke-width='1.235' stroke-linecap='round' stroke-linejoin='round' d='M50.6342 105.4055h52.9167v18.9177H50.6342z')
+              text.pokedex__pokemon-name(x="54" y="117")
+            g
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M82.3842 128.37h10.5833v10.5834H82.3842z')
+                path(d='M83.8394 129.8253h7.673v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M92.9676 138.9534h10.5833v10.5833H92.9676z')
+                path(d='M94.4228 140.4086h7.6729v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M82.3842 138.9534h10.5833v10.5833H82.3842z')
+                path(d='M83.8394 140.4086h7.673v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M71.8009 138.9534h10.5833v10.5833H71.8009z')
+                path(d='M73.2561 140.4086h7.6729v7.6729h-7.6729z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M61.2176 138.9534h10.5833v10.5833H61.2176z')
+                path(d='M62.6728 140.4086h7.6729v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M50.6342 138.9534h10.5833v10.5833H50.6342z')
+                path(d='M52.0894 140.4086h7.673v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M92.9676 128.37h10.5833v10.5834H92.9676z')
+                path(d='M94.4228 129.8253h7.6729v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M50.6342 128.37h10.5833v10.5834H50.6342z')
+                path(d='M52.0894 129.8253h7.673v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M61.2176 128.37h10.5833v10.5834H61.2176z')
+                path(d='M62.6728 129.8253h7.6729v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M71.8009 128.37h10.5833v10.5834H71.8009z')
+                path(d='M73.2561 129.8253h7.6729v7.6729h-7.6729z')
+            g.pokedex__pad-button
+              path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M50.6342 153.8242h10.5833v10.5833H50.6342z')
+              path(d='M52.0894 155.2794h7.673v7.6729h-7.673z')
+              g.pokedex__pad-button
+                path(stroke-width='.4811' stroke-linecap='round' stroke-linejoin='round' d='M61.2176 153.8242h10.5833v10.5833H61.2176z')
+                path(d='M62.6728 155.2794h7.6729v7.6729h-7.673z')
+            rect.pokedex__speaker-grill(width='23.2833' height='7.1437' x='51.1698' y='168.9055' ry='1.7198' fill='#1a1a1a' stroke='#000' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+            rect.pokedex__speaker-grill(ry='1.7198' y='168.9055' x='79.8466' height='7.1437' width='23.2833' fill='#1a1a1a' stroke='#000' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+            g.pokedex__close-light
+              circle(cx='99.2935' cy='159.1159' r='3.8365' stroke-width='1.3229' stroke-linecap='round' stroke-linejoin='round')
+              circle(cx='99.1917' cy='157.9253' r='1.3229')
+              circle(cx='97.6042' cy='159.7773' r='.7937')
+
+      .pokedex__flip-outer-container
+        button.open(title='Open Pokédex')
+        svg.pokedex__flip--outer(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 71.1601 96.4991')
+          g(transform='translate(-27.9376 -180.1892)')
+            //- path.pokedex__outer-panel(d='M-277.0738 232.737c-3.5989 0-6.4962 2.8968-6.4962 6.4957v98.133c0 3.5989 2.8973 6.4963 6.4962 6.4963h72.8788V232.737h-44.7084zM-127.2158 107.0401c-3.5988 0-6.4962 2.8969-6.4962 6.4957v98.133c0 3.599 2.8974 6.4963 6.4962 6.4963h72.8788v-111.125h-44.7084z' fill='none')
+            path.pokedex__shine(d='M78.6296 180.8507l-9.88 12.4034-1.265 1.5875H28.599v81.1852h69.8371v-1.5875h.0005v-93.5886H78.6296z' stroke-width='1.322979374' stroke-linecap='round' stroke-linejoin='round')
+            path.pokedex__outer-panel(d='M78.9526 180.8507l-8.6155 10.8159-1.265 1.5875h-.3225l-1.265 1.5875h-37.298v79.5977h68.2501v-93.5886H78.9526z' fill='red')
+            rect.pokedex__speaker-grill(width='32.317' height='2.6458' x='48.1532' y='269.5514' ry='1.3229' stroke-width='1.323' stroke-linecap='round' stroke-linejoin='round')
+            g.pokedex__open-button(title="Open Pokédex")
+              path(d='M33.6924 226.0793l9.2604 9.355-9.2604 9.3548z' stroke-width='1.323' stroke-linecap='round' stroke-linejoin='round')
+            path.pokedex__outline(d='M78.6296 180.8507l-9.88 12.4034-1.265 1.5875H28.599v81.1852h69.8371v-1.5875h.0005v-93.5886H78.6296z' stroke-width='1.322979374' stroke-linecap='round' stroke-linejoin='round')
