--- a/src/pokedex/style.styl
+++ b/src/pokedex/style.styl
@@ -1,9 +1,177 @@
 *
   box-sizing border-box
+  transition fill calc(var(--transition, 0.2) * 1s) ease
 
 :root
   --size 50
   --unit calc((var(--size) / 305.6582) * 1vmin)
+  --pokedex-red hsl(0, 100%, 50%)
+  --pokedex-inner-red hsl(0, 90%, 40%)
+  --pokedex-dark-red hsl(0, 50%, 20%)
+  --pokedex-shine hsl(0, 100%, 100%)
+  --pokedex-stroke hsl(0, 0%, 0%)
+  --pokedex-grill hsl(0, 0%, 35%)
+  --pokedex-grill-stroke hsl(0, 0%, 10%)
+  --pokedex-open-button hsl(50, 100%, 50%)
+  --pokedex-open-button--hover hsl(40, 100%, 50%)
+  --pokedex-open-button--active hsl(30, 100%, 40%)
+  --pokedex-pad-button--accent hsl(210, 100%, 50%)
+  --pokedex-pad-button hsl(200, 100%, 80%)
+  --pokedex-shine-reduced hsla(0, 0%, 100%, 0.5)
+  --pokedex-screen hsl(0, 0%, 15%)
+  --pokedex-screen-stroke hsl(0, 0%, 0%)
+  --pokedex-screen-surround hsl(0, 0%, 65%)
+  --pokedex-main-screen hsl(200, 100%, 95%)
+  --pokedex-main-button-main hsl(0, 0%, 25%)
+  --pokedex-main-button-shade hsl(0, 0%, 15%)
+  --pokedex-mini-screen-hue 90
+
+.pokedex__big-blue
+  circle:nth-of-type(1)
+    fill hsl(0, 0%, 75%)
+  path:nth-of-type(1)
+    fill hsl(0, 0%, 50%)
+  path:nth-of-type(2)
+    fill hsl(200, 100%, 70%)
+  circle:nth-of-type(4)
+    fill hsla(210, 100%, 40%, 0.5)
+
+.pokedex__mini-light-outline
+  stroke var(--pokedex-grill-stroke)
+
+.pokedex__mini-light--red
+  fill hsl(10, 100%, 40%)
+.pokedex__mini-light--amber
+  fill hsl(50, 100%, 40%)
+.pokedex__mini-light--green
+  fill hsl(90, 100%, 40%)
+
+
+.close:hover ~ .pokedex__flip--inner .pokedex__close-light circle:nth-of-type(1)
+  fill var(--pokedex-open-button--hover)
+.close:active ~ .pokedex__flip--inner .pokedex__close-light circle:nth-of-type(1)
+  fill var(--pokedex-open-button--active)
+
+.pokedex__mini-screen-outline
+  stroke var(--pokedex-grill-stroke)
+.pokedex__mini-screen
+  fill 'hsl(%s, 60%, 40%)' % var(--pokedex-mini-screen-hue)
+
+.pokedex__dpad
+  stroke var(--pokedex-grill-stroke)
+  fill var(--pokedex-grill)
+
+.pokedex__dpad-middle
+  fill var(--pokedex-grill-stroke)
+  stroke var(--pokedex-grill-stroke)
+  opacity 0.4
+
+.open:hover ~ .pokedex__flip--outer .pokedex__open-button path
+  fill var(--pokedex-open-button--hover)
+.open:active ~ .pokedex__flip--outer .pokedex__open-button path
+  fill var(--pokedex-open-button--active)
+
+.pokedex__option-button
+  rect:nth-of-type(1)
+    fill 'hsl(%s, 50%, 50%)' % var(--hue)
+    stroke none
+  rect:nth-of-type(2)
+    fill 'hsl(%s, 50%, 25%)' % var(--hue)
+    stroke none
+  rect:nth-of-type(3)
+    fill none
+    stroke var(--pokedex-grill-stroke)
+
+  &--red
+    --hue 190
+  &--green
+    --hue 90
+
+.pokedex__main-button
+  circle:nth-of-type(1)
+    fill var(--pokedex-main-button-shade)
+  path
+    fill var(--pokedex-main-button-main)
+  circle:nth-of-type(2)
+    stroke var(--pokedex-grill-stroke)
+
+.grab:hover ~ .pokedex__base .pokedex__main-button
+  circle:nth-of-type(1)
+    fill var(--pokedex-main-button-main)
+  path
+    fill var(--pokedex-main-button-shade)
+.grab:active ~ .pokedex__base .pokedex__main-button
+  path
+    fill hsl(0, 0%, 5%)
+
+.pokedex__inner-panel
+  fill var(--pokedex-inner-red)
+  stroke var(--pokedex-stroke)
+
+.pokedex__main-screen
+  fill var(--pokedex-main-screen)
+  stroke var(--pokedex-screen-stroke)
+  stroke-width 1
+
+.pokedex__shine-reduced
+  fill var(--pokedex-shine-reduced)
+  stroke none
+
+.pokedex__screen-notch
+  fill var(--pokedex-grill)
+
+.pokedex__standby-light
+  fill var(--pokedex-red)
+  stroke var(--pokedex-grill-stroke)
+
+.pokedex__screen-surround
+  fill var(--pokedex-screen-surround)
+  stroke var(--pokedex-grill-stroke)
+
+.pokedex__shadow
+  fill var(--pokedex-dark-red)
+
+.pokedex__close-light
+  circle:nth-of-type(1)
+    fill var(--pokedex-open-button)
+    stroke-width 1
+    stroke var(--pokedex-grill-stroke)
+  circle
+    fill var(--pokedex-shine-reduced)
+
+.pokedex__pad-button
+  path:nth-of-type(1)
+    fill var(--pokedex-pad-button)
+    stroke var(--pokedex-grill-stroke)
+  path:nth-of-type(2)
+    fill var(--pokedex-pad-button--accent)
+
+.pokedex__shine
+  fill var(--pokedex-shine)
+  stroke none
+
+.pokedex__flip--outer .pokedex__outer-panel
+  stroke none
+
+.pokedex__outline
+  fill none
+  stroke var(--pokedex-stroke)
+
+.pokedex__outer-panel
+  fill var(--pokedex-red)
+  stroke var(--pokedex-stroke)
+
+.pokedex__speaker-grill
+  fill var(--pokedex-grill)
+  stroke var(--pokedex-grill-stroke)
+
+.pokedex__open-button path
+  fill var(--pokedex-open-button)
+  stroke var(--pokedex-grill-stroke)
+
+.pokedex__text-screen path
+  fill var(--pokedex-screen)
+  stroke var(--pokedex-screen-stroke)
 
 body
   align-items center
@@ -11,33 +179,62 @@ body
   justify-content center
   min-height 100vh
   flex-direction column
-  touch-action none
+  background hsl(205, 100%, 25%)
+
+
+button
+  cursor pointer
+  cursor grab
+
+.close
+  position absolute
+  top 0
+  left 0
+  height 100%
+  width 100%
+  opacity 0
+  z-index 2
+
+.open
+  position absolute
+  height 100%
+  width 100%
+  z-index 2
+  opacity 0
+  top 0
+  left 0
 
 .grab
   position absolute
-  height 44px
-  width 44px
+  height 70%
+  width 100%
   opacity 0
-  bottom calc(66 * var(--unit))
-  left calc(54 * var(--unit))
-  transform translate(-50%, 50%)
-  cursor pointer
+  bottom 0
+  left 0
   z-index 2
 
-  &:hover
-    & ~ .pokedex__base .pokedex__main-button:not(.pokedex__main-button--active)
-      circle:nth-of-type(1)
-        fill purple
-      path
-        fill orange
-
 .pokedex
+
+  &__flash
+    --size 120
+    height calc(var(--size) * var(--unit))
+    width calc(var(--size) * var(--unit))
+    position absolute
+    background radial-gradient(hsl(190, 100%, 95%) 25%, hsla(190, 100%, 90%, 0.95) 50%, transparent 70%)
+    z-index 10
+    opacity 0
+    top calc(62 * var(--unit))
+    left calc(62 * var(--unit))
+    transform translate(-50%, -50%) scale(1.2) translate3d(0, 0, 20px)
+
+
   &__container
     height calc(425 * var(--unit))
     width calc(305.6582 * var(--unit))
     position relative
-    // -43% to center it
-    transform translate(-63%, 0)
+    transform translate(0, 0)
+    transform-style preserve-3d
+    perspective 1000px
 
     svg
       width 100%
@@ -47,15 +244,69 @@ body
     top 0
     left 0
 
-  &__flip
+  &__flip-container
     width 100%
     height 85.5%
     position absolute
     bottom 0
-    left 0%
-    transform-origin 1% 50%
-    transform translate(92.5%, 0) rotateY(180deg)
+    left 0
+    transform-origin 0% 50%
+    transform translate(92.5%, 0) scale(0.995) scaleX(1.005)
     transform-style preserve-3d
+  &__flip
+    --depth 5
+    width 100%
+    height 100%
+    position absolute
+    bottom 0
+    left 0
+    transform-origin 1% 50%
+    transform rotateY(-180deg) translate3d(0, 0, calc((2 * var(--depth)) * -0.1px))
+    transform-style preserve-3d
+
+  &__flip-inner-container
+    height 100%
+    width 100%
+    position absolute
+    bottom 0
+    left 0
+    transform-style preserve-3d
+    transform translate3d(0, 0, calc(var(--depth) * 1px))
+
+  &__flip-outer-container
+    height 100%
+    width 100%
+    position absolute
+    bottom 0
+    left 0
+    transform translate3d(0, 0, calc(var(--depth) * -1px))
+    transform-style preserve-3d
+
+    &:before
+      content ''
+      box-sizing border-box
+      top 0
+      left calc(92 * var(--unit))
+      border-top calc(8 * var(--unit)) solid var(--pokedex-stroke)
+      background var(--pokedex-red)
+      position absolute
+      height calc(100 * var(--unit))
+      width calc(var(--depth) * 2px)
+      transform-origin top center
+      transform rotateY(90deg) translate(-50%, 0) rotateX(37deg)
+
+    &:after
+      content ''
+      box-sizing border-box
+      border-top calc(5 * var(--unit)) solid var(--pokedex-stroke)
+      border-bottom calc(5 * var(--unit)) solid var(--pokedex-stroke)
+      position absolute
+      background var(--pokedex-red)
+      right calc(16 * var(--unit))
+      bottom 0
+      height calc(310 * var(--unit))
+      width calc(var(--depth) * 2px)
+      transform rotateY(90deg) translate(-50%, 0)
 
   &__flip--inner
     position absolute
@@ -63,7 +314,6 @@ body
     bottom 0
     left 0
     transform-origin 1% 50%
-    backface-visibility hidden
 
   &__flip--outer
     position absolute
@@ -72,32 +322,21 @@ body
     bottom 0
     width 100%
     transform rotateY(180deg)
-    backface-visibility hidden
+
+  &__open-button
+    cursor pointer
+    &:hover:not(.pokedex__open-button--active)
+      path
+        fill var(--pokedex-open-button--hover)
+
+    &--active path
+      fill var(--pokedex-open-button--active)
+
+    path
+      transition fill calc(var(--transition, 0.2) * 1s) ease
 
   &__pokemon-name
     fill #fff
     font-family monospace
     font-size 5px
     text-transform uppercase
-
-  &__main-button
-    cursor pointer
-    circle:nth-of-type(1)
-    path
-      transition fill calc(var(--transition, 0.2) * 1s) ease
-    circle:nth-of-type(1)
-      fill red
-    path
-      fill green
-
-    &:hover:not(.pokedex__main-button--active)
-      circle:nth-of-type(1)
-        fill purple
-      path
-        fill orange
-
-    &--active
-      circle:nth-of-type(1)
-        fill yellow
-      path
-        fill blue
